--- a/html-css/module_4/css/style.css
+++ b/html-css/module_4/css/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 img {
-    display: block;
     max-width: 100%;
     height: auto;
 }
@@ -30,7 +29,6 @@ img {
 
 .header {
     padding: 38px 0;
-    background: #ccc;
     margin-bottom: 62px;
 }
 
@@ -41,9 +39,11 @@ img {
     line-height: 1.067;
     text-transform: uppercase;
     text-decoration: none;
+    color: #000;
 }
 
 .site-logo span {
+    font-family: 'Roboto', sans-serif;
     font-weight: 900;
     color: #1abc9c;
 }
@@ -63,6 +63,7 @@ img {
 .nav-item a {
     text-decoration: none;
     text-transform: uppercase;
+    color: #000;
 }
 
 .nav-item1 {
@@ -96,14 +97,14 @@ img {
     margin-bottom: 102px;
 }
 
-.featured-products-wrapper {
+/* .featured-products-wrapper {
     width: 1110px;
     height: 675px;
     margin: 0 auto;
-    background: #ccc;
-}
+} */
 
 .section-headline {
+    font-family: 'Roboto', sans-serif;
     font-weight: 900;
     font-size: 48px;
     text-transform: uppercase;
@@ -126,8 +127,6 @@ img {
 
 .list-item {
     list-style: none;
-    width: 1110px;
-    margin: 0 auto;
 }
 
 .products-item {
@@ -147,13 +146,13 @@ img {
 
 .product-bg {
     width: 255px;
-    /* height: 283px; */
+    height: 283px;
     line-height: 283px;
     background: #e8effc;
+    text-align: center;
 }
 
 .product-image {
-    /* margin: auto auto; */
     vertical-align: middle;
 }
 
@@ -199,9 +198,74 @@ img {
 }
 
 /* LATEST NEWS SECTION  */
+
+.latest-news {
+    margin-bottom: 44px;
+}
   
+.latest-news h2 {
+    margin-bottom: 80px;
+}
 
+.latest-news-list {
+    list-style: none;
+}
 
+.latest-news-item {
+    width: 350px;
+    float: left;
+}
+
+.latest-news-item1 {
+    margin-right: 28px;
+}
+
+.latest-news-item2 {
+    margin-right: 32px;
+}
+
+.latest-news-item img {
+    margin-bottom: 10px;
+}
+
+.news-heading {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.44;
+}
+
+.news-heading::after {
+    content: '';
+    display: block;
+    width: 136px;
+    height: 3px;
+    background: #1abc9c;
+    margin-top: 10px;
+    margin-bottom: 24px;
+}
+
+.news-text {
+    font-size: 14px;
+    line-height: 1.86;
+    margin-bottom: 12px;
+}
+
+.read-more-button {
+    border: none;
+    width: 160px;
+    height: 52px;
+    background: #4ec6ab;
+    font-size: 16px;
+    line-height: 1.625;
+    color: #fff;
+    text-align: center;
+    border-radius: 1px;
+    cursor: pointer;
+}
+
+.read-more-button:focus {
+    border: 2px solid #000;
+}
 
 .visually-hidden {
     border: 0;
