--- a/html-css/module_5/css/style.css
+++ b/html-css/module_5/css/style.css
@@ -103,7 +103,7 @@ img {
     /* width: 1600px; */
     /* height: 600px; */
     margin: 0 auto;
-    background-image: linear-gradient(rgba(0, 0, 2, 0.522),rgba(0, 0, 2, 0.522)), url("/img/slide.jpg");
+    background-image: linear-gradient(rgba(0, 0, 2, 0.522),rgba(0, 0, 2, 0.522)), url(/img/slide.jpg);
     background-size: cover;
 }
 
@@ -126,7 +126,7 @@ img {
 
 .slider-prev {
     transform: translateY(-50%);
-    background-image: url('/img/slide-prev.png');
+    background-image: url(/img/slide-prev.png);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -134,7 +134,7 @@ img {
 .slider-next {
     right: 0;
     transform: translateY(-50%);
-    background-image: url("/img/slide-next.png");
+    background-image: url(/img/slide-next.png);
     background-repeat: no-repeat;
     background-position: center;
 }
