--- a/html-css/module_6/css/style.css
+++ b/html-css/module_6/css/style.css
@@ -67,15 +67,18 @@ html {
 }
 
 .navigation-link::after {
-    content: '';
-    display: block;
+    /* display: block;
     opacity: 0;
-    position: absolute;
     width: 50px;
+    transition: opacity .2s linear; */
+    content: '';
+    position: absolute;
+    width: 0;
     height: 3px;
+    left: 50%;
     background: #f38181;
     bottom: -10px;
-    transition: opacity .2s linear;
+    transition: all 0.2s linear;
 }
 
 .navigation-item:hover .navigation-link {
@@ -83,7 +86,9 @@ html {
 }
 
 .navigation-item:hover .navigation-link::after {
-    opacity: 1;
+    /* opacity: 1; */
+    width: 100%;
+    left: 0;
 }
 
 /* SECTION SERVICES */
