--- a/html-css/module_9/css/media.css
+++ b/html-css/module_9/css/media.css
@@ -11,9 +11,7 @@
         }
 
     .container {
-        width: 320px;
-        padding: 0;
-        margin: 0 auto;
+        max-width: 320px;
     }
     
     .registr-section {
@@ -22,7 +20,7 @@
         margin-bottom: 72px;
     }
 
-    .header-btn {
+    .header-btn-wrap {
         margin-bottom: 118px;
     }
    
@@ -57,6 +55,7 @@
     }
 
     .partner-list-wrap {
+        margin: 0;
         margin-bottom: 28px;
     }
 
@@ -83,8 +82,6 @@
 
     .container {
         max-width: 748px;
-        padding: 0;
-        margin: 0 auto;
     }
 
     .registr-section {
@@ -114,6 +111,7 @@
     }
 
     .partner-list-wrap {
+        margin: 0;
         margin-bottom: 40px;
     }
 
