--- a/html-css/module_10/css/member-card.css
+++ b/html-css/module_10/css/member-card.css
@@ -78,6 +78,9 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: none;
     background-color: #fce38a;
     -webkit-transition: background-color .2s linear;
