--- a/js/module_13_image_finder/src/templates/img_card_template.hbs
+++ b/js/module_13_image_finder/src/templates/img_card_template.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li>
     <div class="photo-card">
-        <img src="{{webformatURL}}" alt="" width="360" height="360" class="card-img" />
+        <img src="{{webformatURL}}" data-source="{{largeImageURL}}" alt="" width="360" height="360" class="card-img" />
         <div class="stats">
             <p class="stats-item">{{likes}}
                 <i class="material-icons">thumb_up</i>
