--- a/js/module_13_image_finder/src/css/styles.css
+++ b/js/module_13_image_finder/src/css/styles.css
@@ -84,3 +84,23 @@ body {
 .material-icons {
   padding-left: 6px;
 }
+
+.basicLightbox {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: 0.01;
+  transition: opacity 0.4s ease;
+  z-index: 1000;
+  will-change: opacity;
+}
+
+.basicLightbox--visible {
+  opacity: 1;
+}
