added minor updates

--- a/js/module_13_image_finder/src/css/styles.css
+++ b/js/module_13_image_finder/src/css/styles.css
@@ -54,6 +54,10 @@ body {
   font-weight: 700;
 }
 
+.load-more:disabled {
+  cursor: default;
+}
+
 .gallery {
   list-style: none;
   display: flex;
